[package]
name = "jfc-learn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }
jfc-core = { path = "../jfc-core" }
jfc-knowledge = { path = "../jfc-knowledge" }
linkscope = { workspace = true }
rsi-rs = { path = "../../../rsi-rs" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
dirs = "5"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
