[package]
name = "jfc-markdown"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde_json = { workspace = true }
jfc-theme = { path = "../jfc-theme" }
itertools = { workspace = true }
pulldown-cmark = { workspace = true }
ratatui = { version = "0.30", default-features = false }
regex = { workspace = true }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
two-face = { workspace = true }
unicode-width = { workspace = true }

[build-dependencies]
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-onig", "yaml-load", "dump-create", "dump-load"] }

[lints]
workspace = true
