[package]
name = "jfc-mcp"
version = "0.1.0"
edition.workspace = true

[dependencies]
jfc-provider = { path = "../jfc-provider" }
rmcp = { version = "1.7", default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "sync", "time", "rt"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
