[package]
name = "jfc-memory"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = "5"
futures = { workspace = true }
jfc-knowledge = { path = "../jfc-knowledge" }
jfc-provider = { path = "../jfc-provider" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
serial_test = "3"

[lints]
workspace = true
