[package]
name = "jfc-providers"
version = "0.1.0"
edition.workspace = true

[dependencies]
jfc-anthropic-sdk = { path = "../jfc-anthropic-sdk" }
jfc-auth = { path = "../jfc-auth" }
jfc-core = { path = "../jfc-core" }
jfc-compress = { path = "../jfc-compress" }
jfc-provider = { path = "../jfc-provider" }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
dirs = "6"
futures = { workspace = true }
fs2 = "0.4"
hmac = "0.12"
hex = { workspace = true }
rand = "0.10"
regex = "1"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7"
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync", "time", "rt", "process"] }
toml = "0.8"
tracing = { workspace = true }
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"
tokio = { workspace = true, features = ["full"] }

[features]
default = ["anthropic-oauth-sensitive"]
anthropic-oauth-sensitive = []

[lints]
workspace = true
