[package]
name = "jfc-remote"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "time", "net", "io-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
hmac = { workspace = true }
sha2 = { workspace = true }
rand = "0.8"
base64 = "0.22"
thiserror = "2"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
