[package]
name = "jfc-session"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
dirs = "5"
futures = { workspace = true }
jfc-core = { path = "../jfc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
