[package]
name = "jfc-session"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = "5"
fs2 = { workspace = true }
futures = { workspace = true }
jfc-core = { path = "../jfc-core" }
jfc-knowledge = { path = "../jfc-knowledge" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "rt-multi-thread", "macros", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
