[package]
name = "jfc-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "jfc"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform = { workspace = true, features = ["wayland"] }
unicode-segmentation.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
