[package]
name = "jfc-ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jfc"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = { version = "0.7", features = ["crossterm"] }
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
arboard = { version = "3", default-features = false, features = ["wayland-data-control", "image-data"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_yaml = "0.9"
toml = "0.8"
dirs = "5"
serde_json = { workspace = true }
unicode-segmentation = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig", "yaml-load"] }
# two-face bundles ~250 language grammars + 32 themes on top of syntect's
# defaults. Codex CLI's renderer (research/openai-codex/codex-rs/tui/src/
# render/highlight.rs:33-44) uses the same primitive — gives us Zig, Nix,
# Fish, Hare, Roc, etc. without hand-rolling .sublime-syntax files. Themes
# include Catppuccin variants used as adaptive defaults.
two-face = "0.5"
ansi-to-tui = "7"
itertools = "0.14"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-onig", "yaml-load", "dump-create", "dump-load"] }
