[package]
name = "jfc-ui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jfc"
path = "src/main.rs"

[dependencies]
# `unstable-rendered-line-info` opts into `Paragraph::line_count(width)` which
# we need for accurate scroll math. ratatui's word-wrap can produce more rows
# than `div_ceil(width)` for the same line, so without this feature the
# message-area total height was undercounted and `follow_bottom` left the
# real last row offscreen until the next chunk's recompute caught up.
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui-textarea = "0.9"
tokio = { workspace = true, features = ["full"] }
tokio-stream = "0.1"
futures = { workspace = true }
anyhow = { workspace = true }
# Cell-width aware string measurement. Used by the input wrap to
# correctly handle CJK / emoji / full-width chars (those occupy 2
# terminal cells per char). Without it `hard_wrap_str` was wrapping
# at character count, so 60 chars of CJK rendered as 120 cells —
# overshot the textarea width and got clipped by `LineTruncator`,
# making typed text disappear at the right edge.
unicode-width = "0.2"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
arboard = { version = "3", default-features = false, features = ["wayland-data-control", "image-data"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_yaml = "0.9"
toml = "0.8"
dirs = "5"
serde_json = { workspace = true }
unicode-segmentation = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig", "yaml-load"] }
# two-face bundles ~250 language grammars + 32 themes on top of syntect's
# defaults. Codex CLI's renderer (research/openai-codex/codex-rs/tui/src/
# render/highlight.rs:33-44) uses the same primitive — gives us Zig, Nix,
# Fish, Hare, Roc, etc. without hand-rolling .sublime-syntax files. Themes
# include Catppuccin variants used as adaptive defaults.
two-face = "0.5"
ansi-to-tui = "8"
itertools = "0.14"
clap = { version = "4", features = ["derive"] }
rand = "0.10.1"
libc = "0.2.186"
# OS-level desktop notifications. Fire-and-forget: when a long-running
# turn completes or a tool fails while jfc isn't focused, the user gets
# a tray bubble instead of having to refocus to check. Disabled when
# `JFC_DISABLE_NOTIFICATIONS=1` so headless / SSH sessions don't error.
notify-rust = { version = "4", default-features = false, features = ["d"] }
jfc-graph = { path = "../jfc-graph" }

[build-dependencies]
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "regex-onig", "yaml-load", "dump-create", "dump-load"] }

[dev-dependencies]
tempfile = "3.27.0"
